--- a/API/API.csproj
+++ b/API/API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<PropertyGroup>
 		<TargetFramework>netcoreapp3.1</TargetFramework>
@@ -25,7 +25,7 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\Adaptor\Adapter.csproj" />
 	  <ProjectReference Include="..\Model\Model.csproj" />
-	  <ProjectReference Include="..\Service\Service.csproj" />
+	  <ProjectReference Include="..\TicketServiceClient\TicketServiceClient.csproj" />
 	</ItemGroup>
 
 
