--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -9,5 +9,9 @@
     "ConnectionStrings": {
         "AccessDb": "Provider=Microsoft.ACE.OLEDB.12.0;Data Source=C:\\_source\\Hackathon\\DB\\Hackathon2022041.accdb;Persist Security Info=False;"
     },
-    "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "ServiceHost": {
+        "ip": "172.25.12.79",
+        "port": "6502"
+    }
 }
